// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> should render ProgressBar with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Label"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-1"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render ProgressBar without label and percentage 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 50,
            "text": "50%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-10"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={50}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "50%",
                },
                {
                  "width": "50%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render color=information ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-14"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(200, 84%, 44%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(200, 84%, 44%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render color=negative ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-16"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(4, 74%, 49%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(4, 74%, 49%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render color=neutral ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-18"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(211, 29%, 26%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(211, 29%, 26%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render color=notice ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-20"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(25, 90%, 48%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(25, 90%, 48%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render color=positive ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-22"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(150, 100%, 32%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(150, 100%, 32%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render medium size ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Label"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-8"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="4px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 4,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render meter variant of ProgressBar  1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 70,
            "text": "70",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="meter-12"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={70}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "70%",
                },
                {
                  "width": "70%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should render small size ProgressBar 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            20%
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Label"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 20,
            "text": "20%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-6"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={20}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "20%",
                },
                {
                  "width": "20%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should update the progress value appropriately 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    borderRadius="4px"
    borderWidth="0px"
    buttonPaddingBottom="0px"
    buttonPaddingLeft="20px"
    buttonPaddingRight="20px"
    buttonPaddingTop="0px"
    collapsable={false}
    data-blade-component="button"
    defaultBackgroundColor="hsla(227, 100%, 59%, 1)"
    defaultBorderColor="hsla(227, 100%, 59%, 1)"
    focusBackgroundColor="hsla(227, 71%, 51%, 1)"
    focusBorderColor="hsla(227, 100%, 59%, 1)"
    focusRingColor="hsla(227, 100%, 59%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(227, 71%, 51%, 1)"
    hoverBorderColor="hsla(227, 100%, 59%, 1)"
    isFullWidth={false}
    isLoading={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard.effective"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "hsla(227, 100%, 59%, 1)",
          "borderColor": "hsla(227, 100%, 59%, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "cursor": "pointer",
          "display": "flex",
          "justifyContent": "center",
          "minHeight": 36,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 0,
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
          "width": "auto",
        },
        {
          "backgroundColor": "hsla(227, 100%, 59%, 1)",
          "borderColor": "hsla(227, 100%, 59%, 1)",
        },
      ]
    }
    type="button"
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      isHidden={false}
      justifyContent="center"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "zIndex": 1,
          },
          {
            "opacity": 1,
          },
        ]
      }
      zIndex={1}
    >
      <Text
        accessible={true}
        color="interactive.text.onPrimary.normal"
        data-blade-component="base-text"
        fontSize={100}
        fontWeight="medium"
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        Update Progress
      </Text>
    </View>
  </View>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            0%
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Label"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 0,
            "text": "0%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-3"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={0}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "0%",
                },
                {
                  "width": "0%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ProgressBar /> should update the progress value appropriately 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    borderRadius="4px"
    borderWidth="0px"
    buttonPaddingBottom="0px"
    buttonPaddingLeft="20px"
    buttonPaddingRight="20px"
    buttonPaddingTop="0px"
    collapsable={false}
    data-blade-component="button"
    defaultBackgroundColor="hsla(227, 100%, 59%, 1)"
    defaultBorderColor="hsla(227, 100%, 59%, 1)"
    focusBackgroundColor="hsla(227, 71%, 51%, 1)"
    focusBorderColor="hsla(227, 100%, 59%, 1)"
    focusRingColor="hsla(227, 100%, 59%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(227, 71%, 51%, 1)"
    hoverBorderColor="hsla(227, 100%, 59%, 1)"
    isFullWidth={false}
    isLoading={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard.effective"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "hsla(227, 100%, 59%, 1)",
          "borderColor": "hsla(227, 100%, 59%, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "cursor": "pointer",
          "display": "flex",
          "justifyContent": "center",
          "minHeight": 36,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 0,
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
          "width": "auto",
        },
        {
          "backgroundColor": "hsla(227, 100%, 59%, 1)",
          "borderColor": "hsla(227, 100%, 59%, 1)",
        },
      ]
    }
    type="button"
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      isHidden={false}
      justifyContent="center"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "zIndex": 1,
          },
          {
            "opacity": 1,
          },
        ]
      }
      zIndex={1}
    >
      <Text
        accessible={true}
        color="interactive.text.onPrimary.normal"
        data-blade-component="base-text"
        fontSize={100}
        fontWeight="medium"
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        Update Progress
      </Text>
    </View>
  </View>
  <View
    data-blade-component="progress-bar"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={75}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            60%
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Label"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 60,
            "text": "60%",
          }
        }
        accessible={true}
        data-blade-component="base-box"
        id="progress-3"
        style={
          [
            {},
          ]
        }
      >
        <View
          backgroundColor="hsla(211, 20%, 52%, 0.09)"
          data-blade-component="base-box"
          height="2px"
          overflow="hidden"
          position="relative"
          style={
            [
              {
                "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
                "height": 2,
                "overflow": "hidden",
                "position": "relative",
              },
            ]
          }
        >
          <View
            backgroundColor="hsla(227, 100%, 59%, 1)"
            progress={60}
            style={
              [
                {
                  "backgroundColor": "hsla(227, 100%, 59%, 1)",
                  "height": "100%",
                  "width": "60%",
                },
                {
                  "width": "60%",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "white",
                    "height": "100%",
                    "opacity": 0,
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
